Add colour margin to about me section

--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
 
   <!-- About Section -->
   <section id="about">
-    <h2>About Me</h2>
-    <p>Hello! I’m learning web development and building awesome projects.</p>
-  </section>
+     <h2>About Me</h2>
+  <p>Hello! I'm <strong>Lindokuhle Kubeka</strong>, a passionate and driven individual with a strong foundation in <strong>Information Technology</strong>. I specialize in <strong>web development</strong>, focusing on creating intuitive and user-friendly websites. My journey in tech began with a keen interest in problem-solving and a desire to build solutions that make a difference.</p>
 
+  <p>Currently, I'm honing my skills in <strong>front-end development</strong>, working with technologies like <strong>HTML</strong>, <strong>CSS</strong>, and <strong>JavaScript</strong> to bring creative ideas to life. I am also exploring <strong>back-end development</strong> to become a well-rounded developer capable of building full-stack applications.</p>
+
+  <p>Beyond coding, I am committed to continuous learning and growth. I actively seek opportunities to collaborate on projects, contribute to open-source communities, and stay updated with the latest industry trends.</p>
+</section>
   <!-- Projects Section -->
   <section id="projects">
     <h2>Projects</h2>
