Add padded & rounding corners to projects

--- a/index.html
+++ b/index.html
@@ -18,19 +18,30 @@
 
   <!-- About Section -->
   <section id="about">
-     <h2>About Me</h2>
-  <p>Hello! I'm <strong>Lindokuhle Kubeka</strong>, a passionate and driven individual with a strong foundation in <strong>Information Technology</strong>. I specialize in <strong>web development</strong>, focusing on creating intuitive and user-friendly websites. My journey in tech began with a keen interest in problem-solving and a desire to build solutions that make a difference.</p>
+    <h2>About Me</h2>
+    <p>Hello! I'm <strong>Lindokuhle Kubeka</strong>, a passionate and driven individual with a strong foundation in <strong>Information Technology</strong>. I specialize in <strong>web development</strong>, focusing on creating intuitive and user-friendly websites. My journey in tech began with a keen interest in problem-solving and a desire to build solutions that make a difference.</p>
 
-  <p>Currently, I'm honing my skills in <strong>front-end development</strong>, working with technologies like <strong>HTML</strong>, <strong>CSS</strong>, and <strong>JavaScript</strong> to bring creative ideas to life. I am also exploring <strong>back-end development</strong> to become a well-rounded developer capable of building full-stack applications.</p>
+    <p>Currently, I'm honing my skills in <strong>front-end development</strong>, working with technologies like <strong>HTML</strong>, <strong>CSS</strong>, and <strong>JavaScript</strong> to bring creative ideas to life. I am also exploring <strong>back-end development</strong> to become a well-rounded developer capable of building full-stack applications.</p>
 
-  <p>Beyond coding, I am committed to continuous learning and growth. I actively seek opportunities to collaborate on projects, contribute to open-source communities, and stay updated with the latest industry trends.</p>
-</section>
+    <p>Beyond coding, I am committed to continuous learning and growth. I actively seek opportunities to collaborate on projects, contribute to open-source communities, and stay updated with the latest industry trends.</p>
+  </section>
+
   <!-- Projects Section -->
   <section id="projects">
     <h2>Projects</h2>
     <ul>
-      <li><a href="#">HTML Boilerplate Project</a></li>
-      <li><a href="#">More coming soon...</a></li>
+      <li>
+        <strong>Portfolio Website:</strong>
+        A responsive personal portfolio built with HTML, CSS, and JavaScript to showcase my projects and skills.
+      </li>
+      <li>
+        <strong>Todo App:</strong>
+        A JavaScript-based todo list app with local storage to track tasks efficiently.
+      </li>
+      <li>
+        <strong>Brewery Database Project:</strong>
+        A full-stack Java project implementing a database for breweries, using SQL for data management.
+      </li>
     </ul>
   </section>
 
@@ -38,7 +49,8 @@
   <section id="contact">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:wonderboy5292@gmail.com">wonderboy5292@gmail.com</a></p>
-    <p>GitHub: <a href="https://github.com/WNDRBROO" target="_blank">WNDRBROO</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/lindokuhle-kubeka-355922220/" target="_blank">linkedin.com/in/lindokuhle-kubeka</a></p>
+    <p>GitHub: <a href="https://github.com/WNDRBROO" target="_blank">github.com/WNDRBROO</a></p>
   </section>
 
   <!-- JavaScript -->
