Add glow effects and accent color

--- a/index.html
+++ b/index.html
@@ -31,16 +31,14 @@
     <h2>Projects</h2>
     <ul>
       <li>
-        <strong>Portfolio Website:</strong>
-        A responsive personal portfolio built with HTML, CSS, and JavaScript to showcase my projects and skills.
+        <a href="https://github.com/WNDRBROO/html-boilerplate" target="_blank">
+          HTML Boilerplate Project
+        </a>
       </li>
       <li>
-        <strong>Todo App:</strong>
-        A JavaScript-based todo list app with local storage to track tasks efficiently.
-      </li>
-      <li>
-        <strong>Brewery Database Project:</strong>
-        A full-stack Java project implementing a database for breweries, using SQL for data management.
+        <a href="https://github.com/WNDRBROO" target="_blank">
+          More coming soon...
+        </a>
       </li>
     </ul>
   </section>
@@ -49,8 +47,7 @@
   <section id="contact">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:wonderboy5292@gmail.com">wonderboy5292@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/lindokuhle-kubeka-355922220/" target="_blank">linkedin.com/in/lindokuhle-kubeka</a></p>
-    <p>GitHub: <a href="https://github.com/WNDRBROO" target="_blank">github.com/WNDRBROO</a></p>
+    <p>GitHub: <a href="https://github.com/WNDRBROO" target="_blank">WNDRBROO</a></p>
   </section>
 
   <!-- JavaScript -->
