--- a/index.html
+++ b/index.html
@@ -44,11 +44,23 @@
   </section>
 
   <!-- Contact Section -->
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:wonderboy5292@gmail.com">wonderboy5292@gmail.com</a></p>
-    <p>GitHub: <a href="https://github.com/WNDRBROO" target="_blank">WNDRBROO</a></p>
-  </section>
+<section id="contact">
+  <h2>Contact</h2>
+  <p>
+    <i class="fas fa-envelope"></i>
+    <a href="mailto:wonderboy5292@gmail.com">wonderboy5292@gmail.com</a>
+  </p>
+  <p>
+    <i class="fab fa-github"></i>
+    <a href="https://github.com/WNDRBROO" target="_blank">WNDRBROO</a>
+  </p>
+  <p>
+    <i class="fab fa-linkedin"></i>
+    <a href="https://www.linkedin.com/in/lindokuhle-kubeka-355922220/" target="_blank">
+      LinkedIn Profile
+    </a>
+  </p>
+</section>
 
   <!-- JavaScript -->
   <script src="script.js"></script>
