--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <!-- Header and navigation -->
   <header>
-    <h1>Welcome to My Portfolio</h1>
+    <h1></h1> <!-- will be filled with typewriter effect -->
     <nav>
       <a href="#about">About</a>
       <a href="#projects">Projects</a>
@@ -30,37 +30,18 @@
   <section id="projects">
     <h2>Projects</h2>
     <ul>
-      <li>
-        <a href="https://github.com/WNDRBROO/html-boilerplate" target="_blank">
-          HTML Boilerplate Project
-        </a>
-      </li>
-      <li>
-        <a href="https://github.com/WNDRBROO" target="_blank">
-          More coming soon...
-        </a>
-      </li>
+      <li><a href="#">HTML Boilerplate Project</a></li>
+      <li><a href="#">More coming soon...</a></li>
     </ul>
   </section>
 
   <!-- Contact Section -->
-<section id="contact">
-  <h2>Contact</h2>
-  <p>
-    <i class="fas fa-envelope"></i>
-    <a href="mailto:wonderboy5292@gmail.com">wonderboy5292@gmail.com</a>
-  </p>
-  <p>
-    <i class="fab fa-github"></i>
-    <a href="https://github.com/WNDRBROO" target="_blank">WNDRBROO</a>
-  </p>
-  <p>
-    <i class="fab fa-linkedin"></i>
-    <a href="https://www.linkedin.com/in/lindokuhle-kubeka-355922220/" target="_blank">
-      LinkedIn Profile
-    </a>
-  </p>
-</section>
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:wonderboy5292@gmail.com">wonderboy5292@gmail.com</a></p>
+    <p>GitHub: <a href="https://github.com/WNDRBROO" target="_blank">WNDRBROO</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/lindokuhle-kubeka-355922220/" target="_blank">Lindokuhle Kubeka</a></p>
+  </section>
 
   <!-- JavaScript -->
   <script src="script.js"></script>
